IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
11/19/08: Fixed Ctfphaseflip to work with parallel processing again.

11/15/08: Model view object edit will make the isosurface be the current
object when either window is opened, so the user will realize it is editable.

11/15/08: In meshing panel of model view object edit, added checkbox for dome
caps, added a progress report, and allowed meshing parameters of multiple
objects to be changed together.

11/15/08: Implemented option for capping tubes with hemispheres (domes), made
open contour meshing maintain consistent lighting direction in most cases, and
fixed a bug in getting the next Z value that could crash meshing.

11/14/08: Fixed clip flipz for odd-sized files and made clip flipyz/rotx be a
little faster for large files by using up to twice the memory.

11/14/08: Added option to imodcurvature for getting mean of stored values.

11/13/08: Made Tilt able to project a model built on a tomogram onto all the
images used to build the tomogram.

11/13/08: In Imodinfo, added a computation of volume inside a mesh, renamed
"mesh volume" to "contour volume", and made it omit the "cylinder" values
if the mesh-based values exist.

11/11/08: IMOD_3-12-21
11/11/08: Fixed problem with bead fixer when prealigned stack loaded binned.

11/11/08: In Etomo fixed a problem with Final Aligned Stack dialog's binning
value, and a problem with Trial tomogram.

11/10/08: The new aligned stack panel was split into tabs for each operation.

11/7/08: Isosurface now keeps a separate threshold for each time (volume).

11/7/08: Fixed the zap subarea coordinates after dragging a rubber band.

11/7/08: Added ctfcorrection log and mtffilter options to the Etomo Final
Aligned Stack dialog's right-click menu.

11/6/08: Fixed autocontrast of reference slice in Midas in reference mode.

11/6/08: Fixed bug in 3dmod float that froze program.
